tentative fix for text cutoff

--- a/packages/api-explorer/api-explorer.css
+++ b/packages/api-explorer/api-explorer.css
@@ -138,7 +138,7 @@ fieldset fieldset .form-group label {
 .field .form-group select {
   border: 1px solid #eaeaea !important;
   border-radius: 2px;
-  padding: 8px 10px;
+  padding: 0px 10px;
   margin-left: 15px;
   height: 30px;
 }
